<resources>
    <string name="app_name">SEDTU</string>
    <string name="login">Inicia Sesión</string>
    <string name="registro">¿Aun no tienes cuenta?</string>
    <string name="crear_cuenta">Crear Cuenta</string>
    <string name="password">Contraseña</string>
    <string name="correo">Correo Electrónico</string>
    <string name="nombre">Nombre</string>
    <string name="apellidoM">Apellido Materno</string>
    <string name="apellidoP">Apellido Paterno</string>
    <string name="calle">Calle y numero</string>
    <string name="colonia">Colonia</string>
    <string name="municipio">Municipio</string>
    <string name="estado">Estado</string>
    <string name="inicio_sesion">Ya te registraste? Inicia Sesión</string>
    <string name="cambio_password">Cambiar Contraseña</string>
    <string name="cerrar_sesion">Cerrar Sesión</string>
    <string name="establecer_fecha_servicio">Establecer fecha del servicio</string>
    <string name="establecer_hora_servicio">Establecer hora del servico</string>
    <string name="establecer_hora">Eestablecer hora</string>
    <string name="establecer_fecha">Establecer fecha</string>
    <string name="solicitar_servicio">Solicitar servicio</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
